gitops/platform/envoy-gateway/resources/httproute-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: frontend
  namespace: moongcheap-develop

spec:
  hostnames:
    - "moongcheap.shop"

  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: moongcheap-gateway
      namespace: infra

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: frontend
          port: 80
          weight: 1
